<resources>
    <string name="app_name">dcc196-2018-3-exr01-victorreis</string>

    <string name="nro_total">Total</string>
    <string name="nro_alunos">Número de alunos</string>
    <string name="nro_servidores">Número de servidores</string>
    <string name="nro_externos">Número de externos</string>
    <string name="btn_alunos">Alunos</string>
    <string name="btn_servidores">Servidores</string>
    <string name="btn_externos">Externos</string>

    <string name="cadastro_alunos">Cadastro de alunos</string>
    <string name="cadastro_servidores">Cadastro de servidores</string>
    <string name="cadastro_externos">Cadastro de externos</string>

    <string name="nome">Nome</string>

    <string name="aluno_matricula">Matrícula</string>
    <string name="servidor_siape">SIAPE</string>
    <string name="externo_email">E-mail</string>

    <string name="btn_cadastrar">Cadastrar</string>

</resources>
